fix(Table): align right add padding-right
Closes #105

--- a/themes/components/table.less
+++ b/themes/components/table.less
@@ -20,6 +20,9 @@
     min-width: 0;
     padding: 3px 0px 3px 8px;
     vertical-align: middle;
+    &.text-right {
+      padding-right: 8px;
+    }
   }
   th&-th-checkbox, td&-td-checkbox{
     text-align: center;
@@ -105,7 +108,6 @@
     border-left: 0;
     td,th{
       border-left: @border;
-      padding: 3px 8px;
     }
     th {
       border-bottom: @border;
